fixes skills spacing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,7 @@
 } */
 
 .skillsContent {
-  height: 55vh;
+  height: 65vh;
 }
 
 /* h1 {
